# HotspotDebugger

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: default.toml
crates/oracle-ai/: Cargo.toml
crates/oracle-ai/src/: anomaly_detector.rs  constraints.rs  hypothesis.rs  lib.rs
crates/oracle-audit/: Cargo.toml
crates/oracle-audit/src/: custody.rs  entry.rs  export.rs  lib.rs  verifier.rs  writer.rs
crates/oracle-capability/: Cargo.toml
crates/oracle-capability/src/: adb.rs  briefing.rs  detector.rs  lib.rs  profiles.rs
crates/oracle-cli/: Cargo.toml
crates/oracle-cli/src/: commands.rs  main.rs  pipeline.rs  startup.rs
crates/oracle-cli/tests/: hardening_tests.rs
crates/oracle-confidence/: Cargo.toml
crates/oracle-confidence/src/: lib.rs  model.rs  scorer.rs
crates/oracle-core/: Cargo.toml
crates/oracle-core/src/: config.rs  error.rs  hash.rs  lib.rs  types.rs  vfs.rs
crates/oracle-correlate/: Cargo.toml
crates/oracle-correlate/src/: anomaly.rs  events.rs  identity.rs  lib.rs  roles.rs  timeline.rs  types.rs
crates/oracle-discovery/: Cargo.toml
crates/oracle-discovery/src/: acquisition.rs  directory_source.rs  lib.rs  manifest.rs  registry.rs  scanner.rs
crates/oracle-evidence/: Cargo.toml
crates/oracle-evidence/src/: cas.rs  integrity.rs  lib.rs  records.rs  store.rs  vfs.rs
crates/oracle-graph/: Cargo.toml
crates/oracle-graph/src/: builder.rs  completeness.rs  edges.rs  health.rs  lib.rs  multi_device.rs  nodes.rs  temporal.rs  traversal.rs
crates/oracle-normalize/: Cargo.toml
crates/oracle-normalize/src/: bssid.rs  conflict.rs  lib.rs  provenance.rs  security.rs  ssid.rs  timestamp.rs
crates/oracle-oem/: Cargo.toml
crates/oracle-oem/src/: lib.rs  plugin.rs  samsung.rs  validation.rs
crates/oracle-parser/: Cargo.toml
crates/oracle-parser/src/: connectivity.rs  dhcp.rs  lib.rs  registry.rs  svr.rs  traits.rs  wifi_config.rs  wpa_supplicant.rs
crates/oracle-report/: Cargo.toml
crates/oracle-report/src/: appendix.rs  custody.rs  custody_report.rs  executive.rs  generator.rs  json_export.rs  lib.rs  pdf.rs  signing.rs  signing_v2.rs  summary.rs  technical.rs  types.rs
crates/oracle-validation/: Cargo.toml
crates/oracle-validation/src/: cross_tool.rs  ground_truth.rs  lib.rs  regression.rs  reproducibility.rs  synthetic.rs
docs/: DEVICE_COMPATIBILITY_MATRIX.md  FORENSIC_METHODOLOGY.md  SETUP_GUIDE.md  STANDARD_OPERATING_PROCEDURE.md  oracle_internship_report.html  project_report.md
oracle-ui/: package-lock.json  package.json
oracle-ui/app/: actions.ts  globals.css  layout.tsx  page.tsx
scripts/: diagnostics.sh  install.ps1  install.sh  mock_validation.sh
