[package]
name = "oracle-capability"
description = "Device capability detection engine for Android forensic analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
oracle-core = { path = "../oracle-core" }
oracle-audit = { path = "../oracle-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
