[package]
name = "oracle-cli"
description = "Command-line interface for the ORACLE Android forensic platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
oracle-core = { path = "../oracle-core" }
oracle-audit = { path = "../oracle-audit" }
oracle-evidence = { path = "../oracle-evidence" }
oracle-capability = { path = "../oracle-capability" }
oracle-discovery = { path = "../oracle-discovery" }
oracle-parser = { path = "../oracle-parser" }
oracle-oem = { path = "../oracle-oem" }
oracle-normalize = { path = "../oracle-normalize" }
oracle-correlate = { path = "../oracle-correlate" }
oracle-confidence = { path = "../oracle-confidence" }
oracle-report = { path = "../oracle-report" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }



[dev-dependencies]
tempfile = { workspace = true }
