[package]
name = "oracle-confidence"
description = "Confidence scoring engine for forensic evidence quality assessment"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
oracle-core = { path = "../oracle-core" }
oracle-audit = { path = "../oracle-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
