[package]
name = "oracle-correlate"
description = "Correlation and timeline engine for cross-referencing forensic evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
oracle-core = { path = "../oracle-core" }
oracle-audit = { path = "../oracle-audit" }
oracle-normalize = { path = "../oracle-normalize" }
oracle-confidence = { path = "../oracle-confidence" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
