[package]
name = "oracle-discovery"
description = "Artifact discovery engine for locating forensic evidence on Android devices"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
## Enable additional mock/stub helpers used exclusively in integration tests.
test-support = []

[dependencies]
oracle-core = { path = "../oracle-core" }
oracle-audit = { path = "../oracle-audit" }
oracle-evidence = { path = "../oracle-evidence" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
